--- a/public/gen.html
+++ b/public/gen.html
@@ -10,217 +10,54 @@
           loader: {load: ['[tex]/mhchem']},
           tex: {inlineMath: [['$', '$'], ['\\(', '\\)']], packages: {'[+]': ['mhchem']}}
         };
-        </script>
-        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+    </script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.4/dist/tailwind.min.css">
+    <link href="
+    https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css
+    " rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/favicon.ico" />
 </head>
 <body class="bg-gradient-to-r from-indigo-500 to-blue-500">
     <nav class="flex items-center justify-between flex-wrap bg-transparent p-6">
         <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <img src="./assets/logo-transparent-png.png" alt="QGenie Logo" class="h-12 w-auto">
+            <a href="/"><img src="./assets/logo-transparent-png.png" alt="QGenie Logo" class="h-12 w-auto"></a>
         </div>
-        <div class="block lg:hidden">
-          <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-500 hover:text-white hover:border-white">
-            <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-          </button>
-        </div>
-      </nav>
+    </nav>
 
     <main class="container mx-auto mt-8 px-8">
         <div class="flex flex-col items-center justify-center">
             <h2 class="text-2xl font-bold text-white mb-4">Generate an Exam-Style Question</h2>
             <p class="text-white mb-8">Select a prompt from the syllabus below and click the button to generate 5 exam style questions.</p>
-            <form id="question-form" class="w-full max-w-sm">
-                <div class="flex items-center border-b border-b-2 border-white py-2">
-                    <select id="prompt" name="prompt" class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none">
-                        <option value="none">Select a Prompt</option>
-                        <optgroup label="A Level Edexcel Economics A: Introduction to Markets and Market Failure">
-                        <option value="1">The Economic Problem</option>
-                        <option value="1">Allocation of Resources</option>
-                        <option value ="1">Demand
-                        <option value="1">Supply</option>
-                        <option value="1">Elasticity</option>
-                        <option value="1"> Market Equilibrium</option>
-                        <option value="1">Indirect Taxes and Subsidies</option>
-                        <option value="1">Price Controls: Minimum and Maximum Prices</option>
-                        <option value="1">Market Failure and Externalities</option>   
-                        <option value="1">Public Goods and Quasi-Public Goods</option>
-                        <option value="1"> Common access resources</option>
-                        <option value="1">Information asymmetry and market failure</option>
-                        </optgroup>
-                        <optgroup label="Edexcel A Level Economics A: The UK Economy - Performance and Policies">
-                        <option value="2">Measures of Economic Performance</option>
-                        <option value="2">Aggregate Demand</option>
-                        <option value="2">Aggregate Supply</option>
-                        <option value="2">National Income and Economic Welfare</option>
-                        <option value="2">Economic Growth</option>
-                        <option value="2">Inflation</option>
-                        <option value="2">Unemployment</option>
-                        <option value="2">Balance of Payments</option>
-                        <option value="2">Macroeconomic Objectives and Policy</option>
-                        <option value="2">Conflicts and Trade Offs</option>
-                        </optgroup>
-                        <optgroup label="AQA A Level History: Tsarist and Communist Russia, 1855-1964">
-                        <option value="3">Political, Social and Economic Condition of Russia in 1855</option>
-                        <option value="3">The Impact of the Crimean War</option>
-                        <option value="3">The Emancipation of he Serfs</option>
-                        <option value="3">Alexander II and III as rulers</option>
-                        <option value="3">Russification & Treatment of Ethnic Minorities</option>
-                        <option value="3">Opposition: Liberals, Radicals and the Tsarist Reaction</option>
-                        <option value="3">Industrial Developments and the Land Issue</option>
-                        <option value="3">Nicholas II as ruler</option>
-                        <option value="3">1905 Revolution</option>
-                        <option value="3">Duma Government</option>
-                        <option value="3">Economic and Social Developments up to 1914</option>
-                        <option value="3">Marxism, Socialism and Liberalism</option>
-                        <option value="3">Political, Economic and Social Problems of Wartime</option>
-                        <option value="3">The Collapse of Autocracy</option>
-                        <option value="3">The Provisional Government</option>
-                        <option value="3">The Bolsheviks</option>
-                        </optgroup>
-                        <optgroup label="AQA A Level History: The English Revolution, 1625-1642">
-                        <option value="4">The Legacy of James I</option>
-                        <option value="4">Monarchy and Divine Right</option>
-                        <option value="4">Challenges to the arbitrary government of Charles I</option>
-                        <option value="4">Parlimentary Radicalism</option>
-                        <option value="4">Charles I's Personal Rule</option>
-                        <option value="4">Religious Issues</option>
-                        <option value="4">Political Issues</option>
-                        <option value="4">Radicalism, dissent and the approach of war</option>
-                        <option value="4">The Political Nation, 1640</option>
-                        <option value="4"> John Pym and the spread of parliamentary radicalism</option>
-                        <option value="4">Conflicts between the Crown and Parliament</option>
-                        <option value="4">The "slide" into war</option>
-                        </optgroup>
-                        <optgroup label="Edexcel A Level Mathematics: Year 1 Stats and Mechanics">
-                            <option value="5">Data Collection</option>
-                            <option value="5">Measures of Location and Spread</option>
-                            <option value="5">Representations of Data</option>
-                            <option value="5">Correlation</option>
-                            <option value="5">Statistical Distributions</option>
-                            <option value="5">Hypothesis Testing</option>
-                            <option value="5">Modelling in Mechanics</option>
-                            <option value="5">Constant Acceleration</option>
-                            <option value="5">Forces and Motion</option>
-                            <option value="5">Variable Acceleration</option>
-                        </optgroup>
-                        <optgroup label="Edexcel A Level Mathematics: Year 1 Pure">
-                        <option value="6">Proofs</option>
-                        <option value="6">Algebra and Functions</option>
-                        <option value="6">Co-ordinate geometry</option>
-                        <option value="6">Sequences and Series</option>
-                        <option value="6">Trigonometry</option>
-                        <option value="6">Exponentials and Logarithms</option>
-                        <option value="6">Differentiation</option>
-                        <option value="6">Integration</option>
-                        <option value="6">Vectors</option>
-                    </optgroup>
-                    <optgroup label="Edexcel A Level Mathematics: Year 2 Pure">
-                        <option value="7">Proofs by Contradiction</option>
-                        <option value="7">Algebra and Functions (Year 2)</option>
-                        <option value="7">Trigonometry(Year 2)</option>
-                        <option value="7">Exponentials and Logarithms(Year 2)</option>
-                        <option value="7">Differentiation (Year 2)</option>
-                        <option value="7">Integration (Year 2)</option>
-                        <option value="7">Numerical Methods (Year 2)</option>
-                        <option value="7">3D Vectors</option>
-                        </optgroup>
-                        <optgroup label="Edexcel A Level Mathematics: Year 2 Stats and Mechanics">
-                            <option value="8">Conditional Probability</option>
-                            <option value="8">The Normal Distribution</option>
-                            <option value="8">Hypothesis Testing (Year 2)</option>
-                            <option value="8">Kinematics</option>
-                            <option value="8">Forces and Motion (Year 2)</option>
-                            <option value="8">Moments</option>
-                            </optgroup>
-                        <optgroup label="AQA A Level Geography: Physical Geography">
-                            <option value="9">Water and Carbon Cycles</option>
-                            <option value="9">Hot Desert Systems and Landscapes</option>
-                            <option value="9">Coastal Systems and Landscapes</option>
-                            <option value="9">Glacial Systems and Landscapes</option>
-                            <option value="9">Hazards</option>
-                            <option value="9">Ecosystems under Stress</option>
-                        </optgroup>
-                        <optgroup label="AQA A Level Geography: Human Geography">
-                            <option value="10">Global Systems and Global Governance</option>
-                            <option value="10">Changing Places</option>
-                            <option value="10">Contemporary Urban Environments</option>
-                            <option value="10">Population and the Environment</option>
-                            <option value="10">Resource Security</option>
-                        </optgroup>
-                        <optgroup label="Edexcel A Level Government and Politics: UK Government">
-                            <option value="11">The Constitution</option>
-                            <option value="11">Parliament</option>
-                            <option value="11">Prime Minister and Executive</option>
-                            <option value="11">Relationship between the branches</option>
-                            <option value="11">The Judiciary</option>
-                            <option value="11">Devolution</option>
-                        </optgroup>
-                        <optgroup label="Edexcel A Level Government and Politics: UK Politics">
-                            <option value="12">Democracy and Participation</option>
-                            <option value="12">Political Parties</option>
-                            <option value="12">Electoral Systems</option>
-                            <option value="12">Voting Behaviour and the Media</option>
-                            <option value="12">Pressure Groups</option>
-                        </optgroup>
-                        <optgroup label="OCR A Level Media Studies: Media Messages">
-                            <option value="13">Media Language</option>
-                            <option value="13">Representations</option>
-                            <option value="13">Media Industries</option>
-                            <option value="13">Media Audiences</option>
-                            <option value="13">Media Contexts</option>
-                        </optgroup>
-                        <optgroup label="AQA A Level Biology">
-                            <option value="14">Biological Molecules</option>
-                            <option value="14">Cells</option>
-                            <option value="14">Organisms exchange substances with their environment</option>
-                            <option value="14">Genetic information, variation and relationships between organisms</option>
-                            <option value="14">Energy transfers in and between organisms</option>
-                            <option value="14">Genetics, populations, evolution and ecosystems</option>
-                            <option value="14">The control of gene expression</option>
-                            <option value="14">Energy Transfers in and between organisms</option>
-                            <option value="14">Responding to changes in the environment</option>
-                            <option value="14">Genetics, populations, evolution and ecosystems</option>
-                            <option value="14">The control of gene expression</option>
-                        </optgroup>
-                        <optgroup label="Edexcel A Level Chemistry: Advanced Inorganic and Physical Chemistry">
-                            <option value="15">Atomic Structure and the Periodic Table</option>
-                            <option value="15">Bonding and Structure</option>
-                            <option value="15">Redox I</option>
-                            <option value="15">Redox II</option>
-                            <option value="15">Inorganic Chemistry and the Periodic Table</option>
-                            <option value="15">Energetics I</option>
-                            <option value="15">Energetics II</option>
-                            <option value="15">Equilibrium I</option>
-                            <option value="15">Equilibrium II</option>
-                            <option value="15">Acid-base Equilibria</option>
-                            <option value="15">Transition Metals</option>
-                        </optgroup>
-                        <optgroup label="Edexcel A Level Chemistry: Advanced Organic and Physical Chemistry">
-                            <option value="16">Bonding and Structure</option>
-                            <option value="16">Redox I</option>
-                            <option value="16">Formulae and Equations</option>
-                            <option value="16">Kinetics I</option>
-                            <option value="16">Kinetics II</option>
-                            <option value="16">Organic Chemistry I</option>
-                            <option value="16">Organic Chemistry II</option>
-                            <option value="16">Organic Chemistry III</option>
-                        </optgroup>
-                    </select>
-                    <button id="generate-btn" class="flex-shrink-0 bg-white hover:bg-gray-300 border-white hover:border-gray-300 text-indigo-500 hover:text-white border-4 text-sm font-bold py-1 px-2 rounded" type="button">
-                        Generate Question
-                    </button>
+                    <form id="question-form" class="w-full max-w-sm">
+                        <div class="flex items-center border-b border-b-2 border-white py-2">
+                            <div class="relative w-full mr-3">
+                                <select id="prompt" name="prompt" class="appearance-none bg-transparent border-none w-full text-gray-700 py-1 px-2 leading-tight focus:outline-none">
+                                    <option value="none">Select a Prompt</option>
+                                    <option value="1">A Level Edexcel Economics A: Introduction to Markets and Market Failure</option>
+                                    <option value="2">Edexcel A Level Economics A: The UK Economy - Performance and Policies</option>
+                                </select>
+                            </div>
+                            <button id="generate-btn" class="flex-shrink-0 bg-white hover:bg-gray-300 border-white hover:border-gray-300 text-indigo-500 hover:text-white border-4 text-sm font-bold py-1 px-2 rounded" type="button">
+                                Generate Question
+                            </button>
+                        </div>
+                        <div class="flex items-center border-b border-b-2 border-white py-2">
+                            <div class="relative w-full mr-3">
+                        <div id="nested-select" class="hidden w-full text-gray-700 py-1 px-2 leading-tight focus:outline-none">
+                            <select id="sub-prompt" name="sub-prompt" class="appearance-none bg-transparent border-none w-full text-gray-700 py-1 px-2 leading-tight focus:outline-none rounded">
+                                <!-- Options will be added dynamically -->
+                            </select>
+                        </div>
+                        </div>
+                        </div>
+                    </form>
                 </div>
-            </form>
-            <div id="question-container" class="mt-8">
-            </div>
+            <div id="question-container" class="mt-8"></div>
         </div>
     </main>
 
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
